--- a/company-dev.yml
+++ b/company-dev.yml
@@ -9,6 +9,11 @@ spring:
     port: 6379
   application:
     name: company
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 env: dev
 server:
   port: 8081
