--- a/user-dev.yml
+++ b/user-dev.yml
@@ -9,6 +9,11 @@ spring:
     port: 6379
   application:
     name: user
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 mybatis:
   mapper-locations: /mapper/**.xml
   type-aliases-package: com.wyj.user.pojo
