--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -1,3 +1,17 @@
 server:
   port: 8801
 env: dev
+zuul:
+  host:
+    connect-timeout-millis: 10000
+    socket-timeout-millis: 60000
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
